scenarios/uc22-cluster-upgrade/frontend/kustomize/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: image-registry.openshift-image-registry.svc:5000/demo-app-resiliency-01/frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
