scenarios/uc22-cluster-upgrade/frontend/kustomize/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: frontend
